welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:27: error: not found: value avancer
  avancer()
  ^PictureMono2:28: error: not found: value avancer
  avancer()
  ^PictureMono2:29: error: not found: value avancer
  avancer()
  ^PictureMono2:30: error: not found: value avancer
  avancer()
  ^PictureMono2:31: error: not found: value avancer
  avancer()
  ^PictureMono2:32: error: not found: value avancer
  avancer()
  ^PictureMono2:33: error: not found: value avancer
  avancer()  
  ^